--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "dependencies": {
     "axios": "^1.1.3",
+    "moment": "^2.29.4",
     "sweetalert2": "^11.6.14",
+    "v-calendar": "^2.4.1",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
     "vuetify": "^2.6.0",
